--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "json-boat-validator"
+name = "turbo-json-checker"
 version = "1.0.0"
 description = "A pushdown automaton low memory JSON bytes stream checker"
 authors = ["Bidoubiwa <charlottevermandel@gmail.com>", "tamo <irevoire@protonmail.ch>", "Kerollmops <clement@meilisearch.com>"]
 edition = "2018"
 license-file = "LICENSE"
-repository = "https://github.com/irevoire/json-boat-validator"
-homepage = "https://github.com/irevoire/json-boat-validator"
+repository = "https://github.com/irevoire/turbo-json-checker"
+homepage = "https://github.com/irevoire/turbo-json-checker"
 readme = "README.md"
 default-run = "ojc"
 
