--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "turbo-json-checker"
 version = "1.0.1"
-description = "A pushdown automaton low memory JSON bytes stream checker returning the JSON root-type followed by its start and end position in the Reader"
+description = "A pushdown automaton low memory JSON bytes stream checker returning the JSON root-type followed by its start and end index in the Reader"
 authors = ["Bidoubiwa <charlottevermandel@gmail.com>", "tamo <irevoire@protonmail.ch>", "Kerollmops <clement@meilisearch.com>"]
 edition = "2018"
 license-file = "LICENSE"
